fix layout on mobile

--- a/app/src/components/Game/game.scss
+++ b/app/src/components/Game/game.scss
@@ -108,7 +108,7 @@
 .game-container {
   $breakpoint: 800px;
   background-color: #333;
-  min-height: 100vh;
+  flex: 1;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -211,30 +211,55 @@
   }
 
   .game-shoot-container {
-    min-width: 0;
-    display: flex;
-    flex: 1;
-    align-items: center;
-    justify-content: space-around;
-    max-width: 1000px;
-    height: 100%;
-    width: 100%;
-
-    p {
-      text-align: center;
-      padding: 10px;
-    }
-
-    @media screen and (max-width: 800px) {
-      flex-direction: column;
-    }
-  }
-
-  .shoot-boat-wrapper {
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+
+    .game-shoot-board {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .game-shoot-switch {
+      background-color: red;
+
+      button {
+        min-height: 30px;
+        height: 10vh;
+        width: 50%;
+        cursor: pointer;
+        font-weight: 500;
+        font-size: 18px;
+        color: #fff;
+        background-color: #2e2e2e;
+        border: none;
+
+        &.active {
+          background-color: #6074ff;
+        }
+      }
+    }
+
+    .game-shoot-xl {
+      display: flex;
+
+      & > div:first-child {
+        margin-right: 15px;
+      }
+    }
+
+    .game-shoot-header {
+      width: 100%;
+    }
+
+    p {
+      width: 100%;
+      text-align: center;
+      padding: 10px;
+    }
 
     .status {
       padding: 10px;
@@ -257,35 +282,32 @@
       border: 1px solid #9ee82d;
     }
 
+    .player-info {
+      width: 100%;
+      display: flex;
+      align-items: center;
+
+      & > div:first-child,
+      & > div:last-child {
+        padding: 10px;
+        width: 50%;
+      }
+
+      .point {
+        font-size: 20px;
+      }
+
+      & > div:first-child {
+        text-align: end;
+        font-weight: 500;
+      }
+    }
+
     .score {
-      font-weight: 500;
+      text-align: center;
       font-size: 20px;
-    }
-  }
-
-  .game-shoot-switch {
-    background-color: blue;
-    width: 100%;
-
-    button {
-      width: 50%;
-      font-size: 15px;
       font-weight: 500;
-      border: none;
-      padding: 20px 0px 20px 0px;
-      cursor: pointer;
-      background-color: #ededed;
     }
-  }
-
-  .game-shoot-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-
-  .game-shoot-info {
-    width: 100%;
   }
 }
 
