--- a/app/src/components/Header/header.scss
+++ b/app/src/components/Header/header.scss
@@ -1,5 +1,6 @@
 .game-header {
   padding: 10px;
+  padding-top: 20px;
   max-width: 1000px;
   width: 100%;
   display: flex;
