--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -3,31 +3,24 @@
   padding: 0;
   font-family: 'Rubik', sans-serif;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
 }
 
-html {
-  height: 100%;
-  //overflow: hidden;
-}
-
-body,
-html {
+html,
+body {
   min-height: calc(var(--vh, 1vh) * 100);
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-
-  @media not all and (hover: hover) {
-    height: var(--vh);
-  }
 }
 
-.body {
-  padding: 5rem 1.5rem;
+body {
   display: flex;
   flex-direction: column;
-  justify-content: left;
-  align-items: left;
+}
+
+#root {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 *:focus {
@@ -36,7 +29,6 @@ html {
 
 .button--ok {
   cursor: pointer;
-  //margin-top: 10px;
   display: flex;
   align-items: center;
   font-size: 15px;
